Pritns: Fix image stretch on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -92,7 +92,7 @@ nav {
 
     header {
         position: fixed;
-        padding-bottom: 0.4em;
+        padding-bottom: 0em;
     }
 
     #title {
