--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -20,13 +20,19 @@
     }
 }
 
-.prints li {
+.img-container {
+    max-height: 600px;
+    max-width: 300px;
+    overflow: hidden;
     vertical-align: top;
     width: 30%;
-    list-style-type: none;
     display: inline-flex;
     margin: 0.5em;
     margin-bottom: 1em;
+}
+
+.prints li {
+    list-style-type: none;
 }
 
 .prints img {
@@ -43,10 +49,13 @@
         margin-top: 6.2em;
     }
 
-    .prints li {
+    .img-container {
+        max-height: 600px;
+        max-width: 300px;
+        overflow: hidden;
         width: 100%;
-        margin-left: 1.1em;
-        margin-right: 1.1em;
+        margin-left: 2.2em;
+        margin-right: 1.9em;
     }
 
     .prints img {
